--- a/P2LWebApplication/Pages/Index.razor
+++ b/P2LWebApplication/Pages/Index.razor
@@ -1,7 +1,6 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Hello, Bobby!</h1>
 
-Welcome to your new app.
+Welcome to the resources booking system.
 
-<SurveyPrompt Title="How is Blazor working for you?"/>
