--- a/P2LWebApplication/Shared/NavMenu.razor
+++ b/P2LWebApplication/Shared/NavMenu.razor
@@ -13,13 +13,13 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="/AllResources">
+                <span class="oi oi-list" aria-hidden="true"></span> All Resourses
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="/CreateResource">
+                <span class="oi oi-plus" aria-hidden="true"></span> Create Resource
             </NavLink>
         </li>
     </ul>
