--- a/P2LWebApplication/_Imports.razor
+++ b/P2LWebApplication/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using P2LWebApplication
 @using P2LWebApplication.Shared
+@using Blazored
+@using Blazored.Modal
+@using Blazored.Modal.Services
