--- a/P2LWebApplication/Shared/NavMenu.razor
+++ b/P2LWebApplication/Shared/NavMenu.razor
@@ -14,7 +14,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/AllResources">
-                <span class="oi oi-list" aria-hidden="true"></span> All Resourses
+                <span class="oi oi-list" aria-hidden="true"></span> All Resources
             </NavLink>
         </li>
         <li class="nav-item px-3">
